Fixed text overflow bug in globalstats

--- a/assets/styles/Dashboard/_768.scss
+++ b/assets/styles/Dashboard/_768.scss
@@ -60,6 +60,7 @@
         display:block;
         max-width:167px;
         margin:0 auto;
+        word-wrap:break-word;
     }
     .c-donut-content__secondary-text--hour,
     .c-donut-content__secondary-text--day {
